--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,34 @@
-#add-sport {
-    background: blue;
+body {
+    background: rgb(145, 141, 138);
+    /* background-image: url('../images/Sports.png'); */
+}
+
+#gif-form {
+    margin-top: 10px;
+}
+
+label {
     color: white;
+}
+
+#add-sport {
+    background: rgb(73, 73, 77);
+    color: white;
+    border-radius: 4px;
+}
+
+.gif-button {
+    margin: 5px 5px;
+    background: rgb(73, 73, 77);
+    color: white;
+    border-radius: 4px;
+}
+
+.gif {
+    margin-bottom: 25px;
+}
+
+p {
+    font-weight: bold;
+    text-transform: uppercase;
 }
